# useriam_user_idm

./: OAT.xml  README.en.md  README.md  README_ZH.md  bundle.json  ohos.build  useridm.gni
frameworks/src/: useridm_callback_stub.cpp  useridm_client.cpp  useridm_getinfo_callback_stub.cpp  useridm_getsecinfo_callback_stub.cpp  useridm_proxy.cpp
interfaces/innerkits/: BUILD.gn  BUILD_old.gn
interfaces/innerkits/include/: iuser_idm.h  iuseridm_callback.h  useridm_callback.h  useridm_callback_stub.h  useridm_client.h  useridm_getinfo_callback_stub.h  useridm_getsecinfo_callback_stub.h  useridm_hilog_wrapper.h  useridm_info.h  useridm_proxy.h
interfaces/kits/js/: basic.d.ts  ohos.UserIAM.userIDM.d.ts
interfaces/kits/napi/: BUILD.gn
interfaces/kits/napi/include/: auth_common.h  authface_userIDM_helper.h  callback.h  hilog_wrapper.h  useridentity_manager.h
interfaces/kits/napi/src/: auth_common.cpp  authface_userIDM_helper.cpp  callback.cpp  native_moudle_init.cpp  useridentity_manager.cpp
sa_profiles/: 5200.xml  901.xml  921.xml  BUILD.gn
services/: BUILD.gn
services/include/: useridm_adapter.h  useridm_callback_proxy.h  useridm_coauth_handler.h  useridm_controller.h  useridm_getinfo_callback_proxy.h  useridm_getsecinfo_callback_proxy.h  useridm_module.h  useridm_moudle.h  useridm_service.h  useridm_setprop_handler.h  useridm_stub.h
services/src/: useridm_adapter.cpp  useridm_callback_proxy.cpp  useridm_coauth_handler.cpp  useridm_controller.cpp  useridm_getinfo_callback_proxy.cpp  useridm_getsecinfo_callback_proxy.cpp  useridm_module.cpp  useridm_moudle.cpp  useridm_service.cpp  useridm_setprop_handler.cpp  useridm_stub.cpp
unittest/: BUILD.gn  BUILD_old.gn
unittest/include/: useridm_callback_test.h  useridm_test.h  useridm_ut_test.h
unittest/src/: useriam_ut_test.cpp  useridm_callback_test.cpp  useridm_ut_test.cpp
utils/: BUILD.gn
