# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/useriam/useridm/useridm.gni")
import("//build/ohos.gni")

config("useridm_private_config") {
  include_dirs = [
    "//base/useriam/coauth/common/interface",
    "${useridm_interfaces_path}/include",
    "${useridm_services_path}/include",
    ]
}

config("useridm_public_config") {
  include_dirs = [
    "include",
  ]
}

ohos_shared_library("useridmservice") {
  sources = [
        "${useridm_services_path}/src/useridm_callback_proxy.cpp",
        "${useridm_services_path}/src/useridm_getinfo_callback_proxy.cpp",
        "${useridm_services_path}/src/useridm_getsecinfo_callback_proxy.cpp",
        "${useridm_services_path}/src/useridm_service.cpp",
        "${useridm_services_path}/src/useridm_stub.cpp",
        "${useridm_services_path}/src/useridm_controller.cpp",
        "${useridm_services_path}/src/useridm_moudle.cpp",
        "${useridm_services_path}/src/useridm_coauth_handler.cpp",
        "${useridm_services_path}/src/useridm_setprop_handler.cpp",
        "${useridm_services_path}/src/useridm_adapter.cpp",
  ]

  configs = [
    ":useridm_private_config",
  ]

  public_configs = [ ":useridm_public_config" ]

  deps = [
    #"//base/useriam/useridm/interfaces/innerkits/useridm:useridm_inner",
    "${useridm_innerkits_path}:useridm_framework",
    "//drivers/peripheral/display/hal:hdi_display_device",
    "//utils/native/base:utils",
    "//base/useriam/coauth/interfaces/innerkits:coauth_framework",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//base/useriam/coauth/common:useriam_common_lib",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "${useridm_native_part_name}"
}
