# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//base/useriam/useridm/useridm.gni")


module_output_path = "useridm/UserIDM_UT_test"

ohos_unittest("UserIDM_UT_test") {
  
  module_out_path = module_output_path
  
  sources = [
    "src/useriam_ut_test.cpp",
    "src/useridm_callback_test.cpp",
  ]

  include_dirs = [
    "include",
    "//base/useriam/useridm/unittest/include",
    "//out/hi3516dv300/innerkits/ohos-arm/ipc/ipc_single/include",
    "//base/useriam/useridm/interfaces/innerkits/include",
    "//base/useriam/useridm/services/include",
  ]
  
  deps = [
    #"//base/useriam/useridm/interfaces/innerkits/useridm:useridm_inner",
    "${useridm_innerkits_path}:useridm_framework",
    "//drivers/peripheral/display/hal:hdi_display_device",
    "//utils/native/base:utils",
    #"//base/security/permission/interfaces/innerkits/permission_standard/distributedpermission/:distributed_permission_innerkits",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    #"//base/useriam/useridm/interfaces/innerkits/useridm:useridm_inner",
    #"//base/useriam/useridm/services/useridmservice/adapter:useridm_authdata_adapter",
  #  "//base/useriam/coauth/interfaces/innerkits:coauth",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}