# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/user_iam/user_idm/useridm.gni")
import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "user_idm/UserIDM_UT_test"

ohos_unittest("UserIDM_UT_test") {
  module_out_path = module_output_path

  sources = [
    "src/useriam_ut_test.cpp",
    "src/useridm_callback_test.cpp",
  ]

  include_dirs = [
    "include",
    "//base/user_iam/user_idm/unittest/include",
    "//out/hi3516dv300/innerkits/ohos-arm/ipc/ipc_single/include",
    "//base/user_iam/user_idm/interfaces/innerkits/include",
    "//base/user_iam/user_idm/services/include",
  ]

  deps = [
    "${useridm_innerkits_path}:useridm_framework",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//drivers/peripheral/display/hal:hdi_display_device",
    "//utils/native/base:utils",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}
