# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/user_iam/user_idm/useridm.gni")
import("//build/lite/config/component/lite_component.gni")
import("//build/ohos.gni")

config("useridm_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//third_party/libuv/include",
  ]
  cflags = []
}

ohos_shared_library("useridm") {
  sources = [
    "src/auth_common.cpp",
    "src/authface_userIDM_helper.cpp",
    "src/callback.cpp",
    "src/useridentity_manager.cpp",
  ]

  include_dirs = [
    "./include",
    "//third_party/libuv/include",
    "${useridm_innerkits_path}:ohosuseridm",
  ]

  deps = [
    "//base/user_iam/user_idm/interfaces/innerkits:useridm_framework",
    "//foundation/arkui/napi:ace_napi",
    "//utils/native/base:utils",
  ]

  public_configs = [ ":useridm_public_config" ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  public_deps = []
  relative_install_dir = "module"
  part_name = "user_idm"
  subsystem_name = "useriam"
}
